[project]
name = "mlagents-env"
version = "0.1.0"
description = "Add your description here"
requires-python = ">= 3.10.1, <=3.10.12"
dependencies = [
    "torch>=2.1.0",
#    "torchvision>=0.22.0",
#    "torchaudio>=2.1.0",
    "mlagents==1.1.0",
]
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
